# PCA-Learning

./: .gitignore  CMakeLists.txt  chartwidget.cpp  chartwidget.h  chartwidget.ui  customchart.cpp  customchart.h  customchartview.cpp  customchartview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pca.cpp  pca.h  pcachart.cpp  pcachart.h  pcachartview.cpp  pcadatamodel.cpp  pcadatamodel.h
datasets/: 10x5.txt  calculatepca.py  data_10x5.txt  generator.py  generator2.py  random_dataset.csv  random_dataset_1.csv  random_dataset_2.csv  random_dataset_3.csv  random_dataset_4.csv  random_dataset_5.csv
datasets/datasets/: random_dataset_1.csv  random_dataset_2.csv  random_dataset_4.csv  random_dataset_5.csv  random_dataset_6.csv
datasets/datasets2/: 500_data1.csv  500_data2.csv  500_data3.csv  big_data1.csv  big_data2.csv  realistic_data2.csv  realistic_data3.csv  realistic_data4.csv  shortdata.csv  shortdata2.csv  shortdata3.csv  shortdata4.csv  shortdata5.csv  shortdata6.csv  smalldata.csv  smalldata2.csv  smalldata3.csv  smalldata4.csv
src/gui/: chartwidget.cpp  chartwidget.h  chartwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcachart.cpp  pcachart.h  pcachartview.cpp  pcachartview.h  selectheadersdialog.cpp  selectheadersdialog.h  selectheadersdialog.ui
src/models/: kmeans.cpp  kmeans.h  model.cpp  model.h  pcadatamodel.cpp  pcadatamodel.h
src/utils/: jacobieigensolver.cpp  jacobieigensolver.h  latools.h  log.h  pca.cpp  pca.h  types.h  utils.h
